--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,12 @@ body {
     background-color: #333;
 }
 
+.vertical-divider {
+    width: 1px;
+    height: 40px;
+    background-color: #333;
+  }
+
 .bio h2 {
     font-family: 'Ellaine', serif;
     font-size: 2rem;
@@ -150,8 +156,17 @@ body.dark {
     background-color: #0e0d0d;
     color: #f4f3f2;
   }
+
+  .dark .left {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1.5rem;
+    border-bottom: none;
+    border-right: none; 
+    border-right: 1px solid #f4f3f2;
+  }
   
-  /* Adjust left section for dark mode */
   .dark .bio h3 {
     font-family: 'Inter', sans-serif;
     font-size: 0.9rem;
@@ -200,10 +215,17 @@ body.dark {
     letter-spacing: 0.05em;
   }
   
-  /* Responsive tweaks */
+  /* RESPONSIVE */
   @media (max-width: 768px) {
     .work-entry h2 {
       font-size: 2.5rem;
+    }
+    .dark .left {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 1.5rem;
+        border-right: none;
+        border-bottom: 1px solid #f4f3f2;
     }
   }
   
